[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/test-ball.png" type="Texture" id=1]
[ext_resource path="res://GodPoolGame/TestSubjects/TestBall.gd" type="Script" id=2]
[ext_resource path="res://GodPoolGame/Components/PullBackComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=4]
[ext_resource path="res://JamKit/Feedback/FeedbackRunner.gd" type="Script" id=5]
[ext_resource path="res://Assets/Hands/hand_low.png" type="Texture" id=6]
[ext_resource path="res://GodPoolGame/TestSubjects/PullBackTrail.gd" type="Script" id=7]
[ext_resource path="res://JamKit/Feedback/Transform/TransformFeedback2D.gd" type="Script" id=8]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.3
bounce = 0.69

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[node name="TestBall" type="RigidBody2D"]
input_pickable = true
mass = 5.0
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
continuous_cd = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="PullBackComponent" parent="." instance=ExtResource( 3 )]

[node name="Pointer" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="PullBackTrail" type="Node2D" parent="."]
position = Vector2( 1, 2 )
script = ExtResource( 7 )

[node name="HandSprite" type="Sprite" parent="PullBackTrail"]
position = Vector2( 9, 41 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="FeedbackRunner" type="Node" parent="PullBackTrail"]
script = ExtResource( 5 )

[node name="TransformFeedback2D" type="Node" parent="PullBackTrail/FeedbackRunner"]
script = ExtResource( 8 )
TargetPath = NodePath("../../HandSprite")
run_time = 0.1
should_return_to_previous = false

[node name="FlickTimer" type="Timer" parent="PullBackTrail"]
wait_time = 0.2
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_TestBall_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TestBall_mouse_exited"]
[connection signal="pull_back_released" from="PullBackComponent" to="." method="_on_PullBackComponent_pull_back_released"]
[connection signal="pull_back_released" from="PullBackComponent" to="PullBackTrail" method="_on_PullBackComponent_pull_back_released"]
[connection signal="pulling_back" from="PullBackComponent" to="." method="_on_PullBackComponent_pulling_back"]
[connection signal="pulling_back" from="PullBackComponent" to="PullBackTrail" method="_on_PullBackComponent_pulling_back"]
[connection signal="timeout" from="PullBackTrail/FlickTimer" to="." method="_on_FlickTimmer_timeout"]
